--- a/src/front-end/SCSS/_config.scss
+++ b/src/front-end/SCSS/_config.scss
@@ -55,9 +55,12 @@
     font-size: 15px;
     cursor: pointer;
     transition: all 350ms ease-in;
-    font-weight: map-get($map: $desktop-h1, $key: fontWeight);
     background-color: map-get($map:$main-color, $key:Primary);
-    color: map-get($map: $main-color, $key: backgroundColor);
+    a{
+        text-decoration: none;
+        font-weight: map-get($map: $desktop-h1, $key: fontWeight);
+        color: map-get($map: $main-color, $key: backgroundColor);
+    }
 
     &:hover {
         background-color: #c73525;
