some modification in HTML code and all CSS code wroted

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './front-end/SCSS/_menu';
-@import './front-end/SCSS/__about'
+@import './front-end/SCSS/__about';
+@import './front-end/SCSS/__relationship';
 
 
