--- a/src/front-end/SCSS/_variables.scss
+++ b/src/front-end/SCSS/_variables.scss
@@ -38,6 +38,6 @@ $main-color : (
     'Primary' : #ef5b4c,
     'Secondary': #007bff,
     'backgroundColor': #fff,
-    'backgroundColor2': #f9f9f3,
+    'backgroundColor2': rgb(249 , 249 , 243),
 )
 
