--- a/src/front-end/SCSS/__relationship.scss
+++ b/src/front-end/SCSS/__relationship.scss
@@ -6,14 +6,45 @@ section#Relationship {
     height: 724px;
     background-color: map-get($map: $main-color, $key:backgroundColor);
 
+    @include tablet{
+        width: 100%;
+        height: 600px;
+    }
+
+    
+    @include mobil {
+        &{
+            width: 100%;
+            height: auto;
+            margin: auto;
+        }
+    }
+
     .container__relation__ship {
         margin: 161px 30px 0 30px;
+        @include tablet {
+            margin: 130px 20px 0 20px;
+        }
+
+        @include mobil{
+            margin: 87px 10px 80px 10px;
+        }
 
         h1 {
             margin-bottom: 70px;
             text-align: center;
             @include header1;
             color: black;
+
+            @include tablet {
+                @include header1Tablet;
+            }
+
+            @include mobil{
+                @include header1Mobil;
+                width: 100%;
+                margin-bottom: 40px;
+            }
         }
 
         .Acquainted__container__flex {
@@ -23,14 +54,53 @@ section#Relationship {
             grid-template-columns: 550px 550px;
             gap: 0 31px;
 
+            @include tablet{
+                &{
+                    width: 100%;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: 0 22px;
 
+                    .image__svg__container{
+                        img{
+                            width: 245px;
+                            height: 245px;
+                        }
+                    }
+                }
+            }
+
+            @include mobil{
+                  &{  
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    height: auto;
+                }
+            }
+
+
+            
             .relationship__requirement__containers {
                 width: 550px;
+                @include tablet{
+                    width: 450px;
+                }
+
+                @include mobil{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                }
 
                 h2 {
                     margin-bottom: 31px;
                     font-size: map-get($map: $header2, $key:fontSize);
                     font-weight: map-get($map: $header2, $key:fontWeight);
+
+                    @include mobil{
+                        width: 100%;
+                    }
                 }
 
                 .requirements__contents {
@@ -38,7 +108,12 @@ section#Relationship {
                         margin-bottom: 36px;
                         @include paragraph;
                         color: black;
+
+                        @include mobil {
+                            margin-bottom: 34px;
+                        }
                     }
+
                 }
 
                 button.btn__Without__background__color {
@@ -47,6 +122,10 @@ section#Relationship {
                     margin: 0;
                     width: auto;
                     line-height: 0;
+
+                    @include mobil {
+                        margin-top: 7px;
+                    }
 
                     a {
                         color: map-get($map: $main-color, $key:Primary);
