--- a/src/front-end/SCSS/__users.scss
+++ b/src/front-end/SCSS/__users.scss
@@ -6,27 +6,50 @@ section#Users {
     height: auto;
     background-color: map-get($map: $main-color, $key: backgroundColor2);
 
-    .btn__sign__up__users{
+    @include mobil {
+        width: 100%;
+        height: auto;
+    }
+
+    .btn__sign__up__users {
         display: flex;
         justify-content: center;
-        button.__btn__sign__up{
+
+        button.__btn__sign__up {
             margin-bottom: 160px;
             @include button;
             font-weight: map-get($map: $desktop-h1, $key: fontWeight);
             color: map-get($map: $main-color, $key: backgroundColor);
+
+            @include mobil{
+                margin-bottom: 80px;
+            }
         }
     }
 
     .users__container {
         margin: 0 80px;
 
+        @include mobil {
+            width: 100%;
+            margin: auto;
+        }
+
         .__bloc__header__message__users {
             padding: 153px 0 80px 0;
+
+            @include mobil {
+                padding: 87px 0 80px 0;
+            }
 
             h1 {
                 text-align: center;
                 @include header1;
                 color: black;
+
+                @include mobil {
+                    @include header1Mobil;
+                }
             }
         }
 
@@ -42,43 +65,56 @@ section#Users {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             text-align: center;
-            p{
+
+            @include mobil {
+                display: flex;
+                flex-direction: column;
+            }
+
+            p {
                 line-height: map-get($map:$paragraph, $key:lineHeight);
             }
 
-            .__user__bloc__all__content {
-                width: 200px;
-                margin: auto;
-                img {
-                    width: 72px;
-                    height: 72px;
-                    border-radius: 50%;
+            .__user__content {
+                @include mobil{
+                    margin-bottom: 38px;
                 }
-
-                h2{
-                    margin: 20px 0 21px 0;
-                    @include header2;
-                }
-               
-                p.__user_position{
-                    line-height: 0;
-                    margin: 0 16px;
-                }
-
-                p.__user_email__address{
+                .__user__bloc__all__content {
                     width: 200px;
-                    margin: 12px 0;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    &:hover{
-                       cursor: pointer;
+                    margin: auto;
+
+                    img {
+                        width: 72px;
+                        height: 72px;
+                        border-radius: 50%;
+                    }
+
+                    h2 {
+                        margin: 20px 0 21px 0;
+                        @include header2;
+                    }
+
+                    p.__user_position {
+                        line-height: 0;
+                        margin: 0 16px;
+                    }
+
+                    p.__user_email__address {
+                        width: 200px;
+                        margin: 12px 0;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
                     }
                 }
             }
         }
 
-        .show__all__user__email__address{
-            background-color: rgba(0 , 0 , 0 , 0.7);
+        .show__all__user__email__address {
+            background-color: rgba(0, 0, 0, 0.7);
             padding: 3px 5px;
             width: auto;
             border-radius: 6px;
@@ -86,7 +122,7 @@ section#Users {
             margin: auto;
             display: table;
             z-index: 10;
-            box-shadow: 0 2px 15px rgba(0, 0, 0 , .4);
+            box-shadow: 0 2px 15px rgba(0, 0, 0, .4);
         }
     }
 }
