--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
 @import './front-end/SCSS/_menu';
 @import './front-end/SCSS/__about';
 @import './front-end/SCSS/__relationship';
-
-
+@import './front-end/SCSS/__scrollbar.scss'
