--- a/src/front-end/SCSS/__footer.scss
+++ b/src/front-end/SCSS/__footer.scss
@@ -5,8 +5,10 @@
 .footer__container{
     background-color: map-get($map: $main-color, $key: backgroundColor);
     
-    hr{
-        background-color: #aaa;
+    .bar__separation__hr {
+        width: 100%;
+        height: 1px;
+        background-color: #ccc;
     }
 
     p{
