--- a/src/front-end/SCSS/__users.scss
+++ b/src/front-end/SCSS/__users.scss
@@ -6,6 +6,11 @@ section#Users {
     height: auto;
     background-color: map-get($map: $main-color, $key: backgroundColor2);
 
+    @include tablet {
+        width: 100%;
+        height: auto;
+    }
+
     @include mobil {
         width: 100%;
         height: auto;
@@ -29,6 +34,10 @@ section#Users {
 
     .users__container {
         margin: 0 80px;
+        
+        @include tablet{
+            margin: 0 30px;
+        }
 
         @include mobil {
             width: 100%;
@@ -46,6 +55,10 @@ section#Users {
                 text-align: center;
                 @include header1;
                 color: black;
+
+                @include tablet{
+                    @include header1Tablet;
+                }
 
                 @include mobil {
                     @include header1Mobil;
@@ -65,6 +78,7 @@ section#Users {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             text-align: center;
+            gap: 10px;
 
             @include mobil {
                 display: flex;
@@ -76,12 +90,13 @@ section#Users {
             }
 
             .__user__content {
+                height: 300px;
                 @include mobil{
                     margin-bottom: 38px;
                 }
                 .__user__bloc__all__content {
                     width: 200px;
-                    margin: auto;
+                    margin: 0 auto;
 
                     img {
                         width: 72px;
