--- a/src/front-end/SCSS/_config.scss
+++ b/src/front-end/SCSS/_config.scss
@@ -38,7 +38,7 @@
 
 @mixin iconAndTest {
     display: flex;
-          margin-left: 30px;
+    margin-left: 30px;
           img{
               width: 32px;
               height: 32px;
@@ -51,6 +51,7 @@
               font-size: map-get($header2, fontSize);
               font-weight: map-get($header2, fontWeight);
               text-transform: uppercase;
+              letter-spacing: 5px;
           }
 }
 
