--- a/src/front-end/SCSS/__signup.scss
+++ b/src/front-end/SCSS/__signup.scss
@@ -5,6 +5,11 @@ section#Signup {
     width: 100%;
     height: 1070px;
     background-color: map-get($map: $main-color, $key: backgroundColor);
+    
+
+    .hide__body__scroll{
+        overflow-y: hidden;
+    }
 
     @include mobil{
         width: 100%;
@@ -19,6 +24,10 @@ section#Signup {
             &::before{
                 content: "*";
                 font-weight: 900;
+            }
+
+            @include mobil{
+                font-size: 9px;
             }
         }
         .signup__header__ {
@@ -68,6 +77,10 @@ section#Signup {
             }
 
             .signup__fill__input {
+                .add__height__{
+                     height: 70px;
+                }
+
                 input {
                     width: 100%;
                     @include input;
@@ -84,6 +97,7 @@ section#Signup {
             }
 
             .sign__up__select__position {
+                margin-top: 35px;
                 p{
                     @include paragraph;
                     color: black;
