--- a/src/front-end/SCSS/_config.scss
+++ b/src/front-end/SCSS/_config.scss
@@ -115,6 +115,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     font-size: 15px;
+    outline: none;
 }
 
 
@@ -157,6 +158,13 @@
 
 @mixin  mobil {
     @media (max-width: $mobil) {
+        @content;
+    }
+}
+
+
+@mixin  desktop {
+    @media (max-width: $desktop) {
         @content;
     }
 }
