--- a/src/front-end/SCSS/_variables.scss
+++ b/src/front-end/SCSS/_variables.scss
@@ -1,9 +1,8 @@
-$desktop: 1024px;
+$desktop: 1440px;
 $tablet: 768px;
-$mobil: 360px;
+$mobil: 375px;
 $isTrue: true;
-
-
+//
 $desktop-h1 : (
     'fontWeight': 400,
     'fontSize': 50px,
